# GuruNote

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  app.py  app_webview.py  gui.py  pyproject.toml  pytest.ini  requirements-gpu.txt  requirements-mac.txt  requirements-notion.txt  requirements-pdf.txt  requirements-search.txt  requirements.txt  run_desktop.bat  run_desktop.sh  run_gui.command  run_web.bat  run_web.sh  run_webview.command  setup.bat  setup.sh
docs/: backlog.md  quality.md
gurunote/: __init__.py  _net.py  app_icon.py  audio.py  exporter.py  hardware.py  history.py  llm.py  log_redirect.py  nav_tree.py  notion_sync.py  obsidian.py  pdf_export.py  pdf_installer.py  progress_tee.py  reporting.py  search.py  search_grounding.py  semantic.py  settings.py  stats.py  stt.py  stt_mlx.py  thumbnails.py  types.py  ui_components.py  ui_state.py  ui_theme.py  ui_toast.py  updater.py
scripts/: package_desktop.py  release_rehearsal_check.py  update_gurunote.py
tests/: conftest.py  test_canonical_auto_user.py  test_canonical_name_correction.py  test_canonical_refresh.py  test_cjk_text_postprocess.py  test_collapse_repeated_lines.py  test_english_annotation_source_check.py  test_original_script_speaker_names.py  test_phase2_entity_cache.py  test_phase2_slow_chunk_timeout.py  test_phase2b_canonical_translation.py  test_phase3_cjk_postprocess.py  test_search_grounding.py  test_search_grounding_module.py  test_segment_resplit.py  test_summary_fidelity.py  test_timestamp_toggle.py  test_title_korean_correction.py  test_two_pass_translation.py  (+1 more)
(+194 files in other folders)
